<resources>
    <string name="app_name">SimpleOSC</string>

    <string name="nav_string_news">综合</string>
    <string name="nav_string_tweet">动弹</string>
    <string name="nav_string_discover">发现</string>
    <string name="nav_string_me">我的</string>
    <string name="nav_string_pub">发布</string>


    <string name="user_info_tweet">动弹</string>
    <string name="user_info_favorite">收藏</string>
    <string name="user_info_following">关注</string>
    <string name="user_info_follower">粉丝</string>


    <string name="no_authorize">没有本地授权信息，请授权登录</string>
    <string name="refresh_invalid">本地授权过期，请重新授权</string>
    <string name="authorize_falied">授权失败，请重试</string>
    <string name="request_fail">网络请求失败,请检查网络链接</string>



    <string name="pub_info">\@%s \u0020 %s</string>
    <string name="iv_string_comment">评论图片</string>
    <string name="zero">0</string>

    <string name="gallery_index">%d/%d</string>
    <string name="pub_tweet">发动弹</string>
    <string name="pub_article">投递文章</string>
    <string name="pub_blog">写博客</string>


</resources>
